install qiskit-aer in CI-pipeline for unitary_calculation test

--- a/.github/workflows/qrisp_test.yml
+++ b/.github/workflows/qrisp_test.yml
@@ -23,6 +23,7 @@ jobs:
           pip install pytest
           pip install -e ./
           pip install pennylane
+          pip install qiskit-aer
       - name: Test with pytest
         run: |
           pytest
