--- a/.github/workflows/qrisp_test.yml
+++ b/.github/workflows/qrisp_test.yml
@@ -24,6 +24,7 @@ jobs:
           pip install -e ./
           pip install pennylane
           pip install qiskit-aer
+          pip install pyscf
       - name: Test with pytest
         run: |
           pytest
