--- a/.github/workflows/qrisp_test.yml
+++ b/.github/workflows/qrisp_test.yml
@@ -24,7 +24,7 @@ jobs:
           pip install -e ./
           pip install pennylane
           pip install qiskit-aer
-          pip install jax
+          pip install jax==0.4.23
       - name: Test with pytest
         run: |
           pytest
