add IQM dependency to setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,9 @@ python_requires = >=3.8
 [options.packages.find]
 where = src
 
+[options.extras_require]
+iqm = qiskit-iqm
+
 [tool:pytest]
 testpaths = ./tests
 pythonpath = .
