--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = qrisp
-version = 0.4.13
-author = Raphael Seidel
+version = 0.4.14
+author = The Qrisp authors
 author_email = raphael.seidel@fokus.fraunhofer.de
 description = A high-level quantum programming language
 long_description = file: README.md
