--- a/.github/workflows/qrisp_test.yml
+++ b/.github/workflows/qrisp_test.yml
@@ -28,6 +28,7 @@ jobs:
           pip install jaxlib==0.4.28
           pip install pyscf
           pip install qiskit-iqm
+          pip install stim
       - name: Test with pytest
         run: |
           pytest
