--- a/.github/workflows/qrisp_test.yml
+++ b/.github/workflows/qrisp_test.yml
@@ -22,8 +22,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest
           pip install -e ./
-          pip install pennylane
-          pip install pennylane-catalyst
+          pip install --upgrade pennylane-catalyst
           pip install qiskit-aer
           pip install jax==0.4.28
           pip install jaxlib==0.4.28
