made catalyst version requirement explicit

--- a/.github/workflows/qrisp_test.yml
+++ b/.github/workflows/qrisp_test.yml
@@ -22,7 +22,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest
           pip install -e ./
-          pip install --upgrade pennylane-catalyst
+          pip install pennylane-catalyst==0.10.*
           pip install qiskit-aer
           pip install jax==0.4.28
           pip install jaxlib==0.4.28
