--- a/.github/workflows/qrisp_test.yml
+++ b/.github/workflows/qrisp_test.yml
@@ -22,10 +22,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest
           pip install -e ./
-          pip install --upgrade pennylane-catalyst
+          pip install --extra-index-url https://test.pypi.org/simple/ --pre pennylane-catalyst
           pip install qiskit-aer
-          pip install jax==0.4.28
-          pip install jaxlib==0.4.28
           pip install pyscf
           pip install qiskit-iqm
           pip install stim
