--- a/.github/workflows/qrisp_test.yml
+++ b/.github/workflows/qrisp_test.yml
@@ -24,7 +24,7 @@ jobs:
           pip install -e ./
           pip install --upgrade pennylane-catalyst
           pip install qiskit-aer
-          pip install qiskit-ibm-runtime
+          pip install qiskit-iqm
           pip install pyscf
           pip install stim
       - name: Test with pytest
