--- a/.github/workflows/qrisp_test.yml
+++ b/.github/workflows/qrisp_test.yml
@@ -23,13 +23,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest
+          pip install pytest qiskit-aer qiskit-iqm pyscf stim cirq
           pip install -e ./
-          pip install --upgrade pennylane-catalyst
-          pip install qiskit-aer
-          pip install qiskit-iqm
-          pip install pyscf
-          pip install stim
+          pip install --upgrade pennylane-catalyst 
       - name: Test with pytest
         run: |
           pytest
