--- a/.github/workflows/qrisp_test.yml
+++ b/.github/workflows/qrisp_test.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest qiskit-aer qiskit-iqm pyscf stim cirq
+          pip install pytest qiskit-aer qiskit-iqm pyscf stim cirq xdsl
           pip install -e ./
           pip install --upgrade pennylane-catalyst 
       - name: Test with pytest
