minor version jump

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
 name = qrisp
-version = 0.7.13
+version = 0.7.14
 author = The Qrisp authors
 author_email = raphael.seidel@meetiqm.com
 description = A high-level quantum programming language
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/fraunhoferfokus/Qrisp
+url = https://github.com/eclipse-qrisp/Qrisp
 project_urls =
-    Bug Tracker = https://github.com/fraunhoferfokus/Qrisp/issues
+    Bug Tracker = https://github.com/eclipse-qrisp/Qrisp/issues
     
 [options]
 package_dir =
