--- a/.github/workflows/qrisp_test.yml
+++ b/.github/workflows/qrisp_test.yml
@@ -28,6 +28,7 @@ jobs:
           pip install --upgrade pennylane-catalyst
           pip install qiskit-aer
           pip install qiskit-iqm
+          pip install qiskit-ibm-runtime
           pip install pyscf
           pip install stim
           pip install xdsl
